# bls-eth-go-binary

./: BUILD.bazel
bls/: BUILD.bazel  bls.go  bls_test.go  mcl.go
bls/include/bls/: bls.h  bls384_256.h
bls/include/mcl/: bn.h  bn_c384_256.h
